--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,10 +35,9 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
-file.reference.antlr-3.5.2-complete.jar=lib\\antlr-3.5.2-complete.jar
 file.reference.BTREE-SNAPSHOT.jar=lib\\BTREE-SNAPSHOT.jar
+file.reference.jsqlparser-0.9.5-SNAPSHOT.jar=lib\\jsqlparser-0.9.5-SNAPSHOT.jar
 file.reference.org.json-20120521.jar=lib\\org.json-20120521.jar
-file.reference.poi-3.12-20150511.jar=lib\\poi-3.12-20150511.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -55,8 +54,7 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.org.json-20120521.jar}:\
     ${file.reference.BTREE-SNAPSHOT.jar}:\
-    ${file.reference.poi-3.12-20150511.jar}:\
-    ${file.reference.antlr-3.5.2-complete.jar}
+    ${file.reference.jsqlparser-0.9.5-SNAPSHOT.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
