--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,6 +36,9 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
 file.reference.BTREE-SNAPSHOT.jar=lib\\BTREE-SNAPSHOT.jar
+file.reference.commons-cli-1.3.1-javadoc.jar=lib\\commons-cli-1.3.1-javadoc.jar
+file.reference.commons-cli-1.3.1.jar=lib\\commons-cli-1.3.1.jar
+file.reference.jline-2.14-SNAPSHOT.jar=lib\\jline-2.14-SNAPSHOT.jar
 file.reference.jsqlparser-0.9.5-SNAPSHOT.jar=lib\\jsqlparser-0.9.5-SNAPSHOT.jar
 file.reference.org.json-20120521.jar=lib\\org.json-20120521.jar
 includes=**
@@ -54,7 +57,10 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.org.json-20120521.jar}:\
     ${file.reference.BTREE-SNAPSHOT.jar}:\
-    ${file.reference.jsqlparser-0.9.5-SNAPSHOT.jar}
+    ${file.reference.jsqlparser-0.9.5-SNAPSHOT.jar}:\
+    ${file.reference.commons-cli-1.3.1-javadoc.jar}:\
+    ${file.reference.commons-cli-1.3.1.jar}:\
+    ${file.reference.jline-2.14-SNAPSHOT.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
