--- a/build.xml
+++ b/build.xml
@@ -68,4 +68,11 @@
     nbproject/build-impl.xml file. 
 
     -->
+    <target name="-post-compile">
+    <jar destfile="${basedir}/dist/my_web_app.jar">
+        <fileset dir="${basedir}/build/web/WEB-INF/classes">
+
+        </fileset>
+    </jar>
+    </target>
 </project>
