--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -40,7 +40,7 @@ file.reference.json-simple-1.1.1.jar=lib\\json-simple-1.1.1.jar
 file.reference.jsqlparser-0.9.5-SNAPSHOT.jar=lib\\jsqlparser-0.9.5-SNAPSHOT.jar
 file.reference.org.json-20120521.jar=lib\\org.json-20120521.jar
 includes=**
-j2ee.compile.on.save=true
+j2ee.compile.on.save=false
 j2ee.copy.static.files.on.save=true
 j2ee.deploy.on.save=false
 j2ee.platform=1.7-web
